--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
             android:id="@+id/rv_feed_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/extra_extra_light_gray"
             android:fillViewport="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
