--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bsl_order_menu"
+    android:id="@+id/bsl_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.akexorcist.sleepingforless.view.feed.MainActivity">
