--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,45 +83,36 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="80dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/iv_menu_search"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:padding="10dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/vector_ic_search" />
+                <com.akexorcist.sleepingforless.widget.MenuButton
+                    android:id="@+id/btn_menu_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    app:mbIconSrc="@drawable/vector_ic_search"
+                    app:mbText="Search" />
 
-                <ImageView
-                    android:id="@+id/iv_menu_order"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:padding="10dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/vector_ic_order" />
+                <com.akexorcist.sleepingforless.widget.MenuButton
+                    android:id="@+id/btn_menu_sort"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    app:mbIconSrc="@drawable/vector_ic_sort"
+                    app:mbText="Sort" />
 
-                <ImageView
-                    android:id="@+id/iv_menu_settings"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:padding="10dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/vector_ic_settings" />
+                <com.akexorcist.sleepingforless.widget.MenuButton
+                    android:id="@+id/btn_menu_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    app:mbIconSrc="@drawable/vector_ic_settings"
+                    app:mbText="Settings" />
             </LinearLayout>
         </com.bowyer.app.fabtransitionlayout.FooterLayout>
     </android.support.design.widget.CoordinatorLayout>
