--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="default_text_size_extra_extra_small">10sp</dimen>
     <dimen name="default_text_size_extra_small">12sp</dimen>
     <dimen name="default_text_size_small">16sp</dimen>
     <dimen name="default_text_size">18sp</dimen>
