--- a/app/src/main/res/layout/view_include_post_content.xml
+++ b/app/src/main/res/layout/view_include_post_content.xml
@@ -10,6 +10,8 @@
         android:fillViewport="false"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
