--- a/app/src/main/res/layout/view_include_search_result_content.xml
+++ b/app/src/main/res/layout/view_include_search_result_content.xml
@@ -14,5 +14,6 @@
         android:layout_height="match_parent"
         android:background="@color/extra_extra_light_gray"
         android:fillViewport="false"
+        android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </merge>
